--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <title>Erin Villasenor Website</title>
     <link rel="stylesheet" href="css/main.css">
-    <script src="https://kit.fontawesome.com/726049509b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/726049509b.js" defer crossorigin="anonymous"></script>
 </head>
 
 <body class="light-theme">
     <div class="topnav">
-        <a class="active" href="index.html">Home</a>
-        <a href="html/projects.html">Projects</a>
-        <a href="html/contact.html">Contact</a>
-        <a href="html/about.html">About</a>
-        <a href="html/guestbook.html">Guestbook</a>
-        <button class="btn"><i id = "icon" class="fas fa-moon"></i>Dark Mode</button>
+        <a class="active" href="index.html"><i class="fas fa-home"></i>Home</a>
+        <a href="html/projects.html"><i class="fas fa-archive"></i>Projects</a>
+        <a href="html/contact.html"><i class="fas fa-phone"></i>Contact</a>
+        <a href="html/about.html"><i class="fas fa-user"></i>About</a>
+        <a href="html/guestbook.html"><i class="fas fa-book"></i>Guestbook</a>
+        <button class="btnToDark"><i class="fas fa-moon"></i> Dark Mode</button>
+        <button class="btnToLight"><i class="fas fa-sun"></i> Light Mode</button>
 
     </div>
 
