Toggle works correctly now

--- a/html/contact.html
+++ b/html/contact.html
@@ -5,18 +5,27 @@
     <meta charset="UTF-8">
     <title>Contact</title>
     <link rel="stylesheet" href="../css/main.css">
+    <script src="https://kit.fontawesome.com/726049509b.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body class="light-theme">
     <div class="topnav">
 
-        <a href="../index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a class="active" href="#contact">Contact</a>
-        <a href="about.html">About</a>
-        <a href="guestbook.html">Guestbook</a>
-        <button class="btn">Dark Mode</button>
+        <a href="../index.html"><i class="fas fa-home"></i>Home</a>
+        <a href="projects.html"><i class="fas fa-archive"></i>Projects</a>
+        <a class="active" href="contact.html"><i class="fas fa-phone"></i>Contact</a>
+        <a href="about.html"><i class="fas fa-user"></i>About</a>
+        <a href="guestbook.html"><i class="fas fa-book"></i>Guestbook</a>
 
+    </div>
+    <div class="toggle-box">
+        <input type="checkbox" class="checkbox" id="chk" />
+        <label class="label" for="chk">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball"></div>
+        </label>
     </div>
 
     <h1>Contact Me!</h1>
