--- a/html/projects.html
+++ b/html/projects.html
@@ -11,13 +11,21 @@
 <body class="light-theme">
     <div class="topnav">
 
-        <a href="../index.html">Home</a>
-        <a class="active" href="#projects">Projects</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About</a>
-        <a href="guestbook.html">Guestbook</a>
-        <button class="btn">Dark Mode</button>
+        <a href="../index.html"><i class="fas fa-home"></i>Home</a>
+        <a class="active" href="projects.html"><i class="fas fa-archive"></i>Projects</a>
+        <a href="contact.html"><i class="fas fa-phone"></i>Contact</a>
+        <a href="about.html"><i class="fas fa-user"></i>About</a>
+        <a href="guestbook.html"><i class="fas fa-book"></i>Guestbook</a>
 
+    </div>
+
+    <div class="toggle-box">
+        <input type="checkbox" class="checkbox" id="chk" />
+        <label class="label" for="chk">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball"></div>
+        </label>
     </div>
 
     <h1>Projects</h1>
