--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
         <a href="html/contact.html"><i class="fas fa-phone"></i>Contact</a>
         <a href="html/about.html"><i class="fas fa-user"></i>About</a>
         <a href="html/guestbook.html"><i class="fas fa-book"></i>Guestbook</a>
-        <button class="btnToDark"><i class="fas fa-moon"></i> Dark Mode</button>
-        <button class="btnToLight"><i class="fas fa-sun"></i> Light Mode</button>
-
+    </div>
+    <div class="toggle-box">
+        <input type="checkbox" class="checkbox" id="chk" />
+        <label class="label" for="chk">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball"></div>
+        </label>
     </div>
 
     <h1>List</h1>
