--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Erin Villasenor Website</title>
     <link rel="stylesheet" href="css/main.css">
-    <script src="https://kit.fontawesome.com/726049509b.js" defer crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/726049509b.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="light-theme">
