Filled out html pages somewhat

--- a/html/about.html
+++ b/html/about.html
@@ -29,12 +29,9 @@
     </div>
 
     <h1>About</h1>
-    <p id="msg">Erin Villasenor is</p>
-    <ul>
-        <li class="list">Capstone project with HP Labs</li>
-        <li class="list"> </li>
-        <li>Enable switching the theme</li>
-    </ul>
+    <img src="../images/ErinMug.jpg" alt="A picture of Erin holding a mug" width="500" height="600">
+    <p>In my free time, I enjoy reading, working on projects like this website, drinking craft beer, and playing Dungeons & Dragons with my friends!</p>
+
 
     <script src="../app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
