--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
         </label>
     </div>
 
-    <h1>List</h1>
-    <p id="msg">Current tasks:</p>
+    <h1>Welcome!</h1>
+    <br>Hello, I'm Erin Villasenor, a graduate of Oregon State Unversity.
+    <br>I graduted with a B.S. in Computer Science and love putting the skills I learned to good use.<br></br>I have experience in the following languages:</p>
     <ul>
-        <li class="list">Add visual styles</li>
-        <li class="list"> Add light and dark themes</li>
-        <li>Enable switching the theme</li>
+        <li>C/C++</li>
+        <li>Java</li>
+        <li>Python</li>
+        <li>And of course, the languages used to build this very website (HTML5, CSS, and JavaScript)</li>
     </ul>
 
+    <p>This website is always evolving as I learn more about good web design practice, and become more familiar with the tools at my disposal. Some pages may be added or altered along my journey!</p>
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
