--- a/html/projects.html
+++ b/html/projects.html
@@ -31,9 +31,26 @@
     <h1>Projects</h1>
     <p id="msg">My projects:</p>
     <ul>
-        <li class="list">Capstone project with HP Labs</li>
-        <li class="list"> </li>
-        <li>Enable switching the theme</li>
+        <li>Capstone project with HP Labs:
+            <br></br>
+            <br>This project was my Senior Capstone project at Oregon State University, which I worked on with Devin Swift and Paul Lee.
+            <br>The summary of the project was to automate the process of altering variables in a CAD (SolidWorks) and use machine learning to narrow the scope of the parameters in order to meet a given objective</br>
+            <br>In our case, we used a launcher and propellor model to maximize airtime of the propellors we created in SolidWorks</br>
+            <br></br> More information can be found on our <a href="https://github.com/ErinVillasenor/CS80Project">GitHub</a>
+            <br></br>
+            If you're interested in the results of our project, including our more technical papers and experiment data, please send me an email!
+            </p>
+            <br></br>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/jwm2ER5R04c"></iframe>
+            </iframe>
+
+
+        </li>
+        <br></br>
+        <li>
+
+
+        </li>
     </ul>
 
     <script src="../app.js"></script>
