Edited WIP pages

--- a/html/contact.html
+++ b/html/contact.html
@@ -29,12 +29,7 @@
     </div>
 
     <h1>Contact Me!</h1>
-    <p id="msg">Contact Me!</p>
-    <ul>
-        <li class="list">Capstone project with HP Labs</li>
-        <li class="list"> </li>
-        <li>Enable switching the theme</li>
-    </ul>
+    <p>This page is a work in progress!</p>
 
     <script src="../app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
