--- a/html/guestbook.html
+++ b/html/guestbook.html
@@ -28,12 +28,8 @@
     </div>
 
     <h1>Guestbook</h1>
-    <p id="msg">Erin Villasenor is</p>
-    <ul>
-        <li class="list">Capstone project with HP Labs</li>
-        <li class="list"> </li>
-        <li>Enable switching the theme</li>
-    </ul>
+    <p>This page is a work in progress!</p>
+
 
     <script src="../app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
