Added contact info, background images, image carousel

--- a/html/about.html
+++ b/html/about.html
@@ -28,13 +28,26 @@
         </label>
     </div>
 
-    <h1>About</h1>
-    <img src="../images/ErinMug.jpg" alt="A picture of Erin holding a mug" width="500" height="600">
-    <p>In my free time, I enjoy reading, working on projects like this website, drinking craft beer, and playing Dungeons & Dragons with my friends!</p>
+    <div class="textbox">
+
+        <h1>About</h1>
+        <div id="carousel">
+            <figure>
+                <img src="../images/ErinMug.jpg" alt="A picture of Erin holding a mug">
+                <img src="../images/erinFamily.jpg" alt="Erin and his family at the plaza">
+                <img src="../images/erinDnd.jpg" alt="Erin with his Dungeons and Dragons group">
+                <img src="../images/erinCousins.jpg" alt="Erin with his cousins in Mexico">
+                <img src="../images/ErinMug.jpg" alt="A picture of Erin holding a mug">
 
 
-    <script src="../app.js"></script>
-    <noscript>You need to enable JavaScript to view the full site.</noscript>
+            </figure>
+        </div>
+        <p>In my free time, I enjoy reading, working on projects like this website, drinking craft beer, and playing Dungeons & Dragons with my friends!</p>
+
+
+        <script src="../app.js"></script>
+        <noscript>You need to enable JavaScript to view the full site.</noscript>
+    </div>
 </body>
 
 </html>
