--- a/html/contact.html
+++ b/html/contact.html
@@ -28,8 +28,12 @@
         </label>
     </div>
 
-    <h1>Contact Me!</h1>
-    <p>This page is a work in progress!</p>
+    <div class="textbox">
+
+        <h1>Contact Me!</h1>
+        <p><span class="tumnus bitter">toh</span></p>
+        <p><span class="tumnus fruity">145</span></p>
+    </div>
 
     <script src="../app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
