--- a/html/projects.html
+++ b/html/projects.html
@@ -28,33 +28,36 @@
         </label>
     </div>
 
-    <h1>Projects</h1>
-    <p id="msg">My projects:</p>
-    <ul>
-        <li>Capstone project with HP Labs:
+    <div class="textbox">
+
+        <h1>Projects</h1>
+        <p id="msg">My projects:</p>
+        <ul>
+            <li>Capstone project with HP Labs:
+                <br></br>
+                <br>This project was my Senior Capstone project at Oregon State University, which I worked on with Devin Swift and Paul Lee.
+                <br>The summary of the project was to automate the process of altering variables in a CAD (SolidWorks) and use machine learning to narrow the scope of the parameters in order to meet a given objective</br>
+                <br>In our case, we used a launcher and propellor model to maximize airtime of the propellors we created in SolidWorks</br>
+                <br></br> More information can be found on our <a href="https://github.com/ErinVillasenor/CS80Project">GitHub</a>
+                <br></br>
+                If you're interested in the results of our project, including our more technical papers and experiment data, please send me an email!
+                </p>
+                <br></br>
+                <iframe width="420" height="315" src="https://www.youtube.com/embed/jwm2ER5R04c"></iframe>
+                </iframe>
+
+
+            </li>
             <br></br>
-            <br>This project was my Senior Capstone project at Oregon State University, which I worked on with Devin Swift and Paul Lee.
-            <br>The summary of the project was to automate the process of altering variables in a CAD (SolidWorks) and use machine learning to narrow the scope of the parameters in order to meet a given objective</br>
-            <br>In our case, we used a launcher and propellor model to maximize airtime of the propellors we created in SolidWorks</br>
-            <br></br> More information can be found on our <a href="https://github.com/ErinVillasenor/CS80Project">GitHub</a>
-            <br></br>
-            If you're interested in the results of our project, including our more technical papers and experiment data, please send me an email!
-            </p>
-            <br></br>
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/jwm2ER5R04c"></iframe>
-            </iframe>
+            <li>
 
 
-        </li>
-        <br></br>
-        <li>
+            </li>
+        </ul>
 
-
-        </li>
-    </ul>
-
-    <script src="../app.js"></script>
-    <noscript>You need to enable JavaScript to view the full site.</noscript>
+        <script src="../app.js"></script>
+        <noscript>You need to enable JavaScript to view the full site.</noscript>
+    </div>
 </body>
 
 </html>
