Removed Guestbook for now, added social media

--- a/html/contact.html
+++ b/html/contact.html
@@ -16,7 +16,6 @@
         <a href="projects.html"><i class="fas fa-archive"></i>Projects</a>
         <a class="active" href="contact.html"><i class="fas fa-phone"></i>Contact</a>
         <a href="about.html"><i class="fas fa-user"></i>About</a>
-        <a href="guestbook.html"><i class="fas fa-book"></i>Guestbook</a>
 
     </div>
     <div class="toggle-box">
@@ -33,6 +32,11 @@
         <h1>Contact Me!</h1>
         <p><span class="tumnus bitter">toh</span></p>
         <p><span class="tumnus fruity">145</span></p>
+
+        <a href="https://www.linkedin.com/in/erin-villasenor/"> <i class="fab fa-linkedin" style="font-size: 300%"></i>
+        </a>
+        <a href="https://github.com/ErinVillasenor"> <i class="fab fa-github-square" style="font-size: 300%"></i>
+        </a>
     </div>
 
     <script src="../app.js"></script>
