--- a/html/test.html
+++ b/html/test.html
@@ -15,6 +15,7 @@
         <a href="../index.html"><i class="fas fa-home"></i>Home</a>
         <a href="contact.html"><i class="fas fa-phone"></i>Contact</a>
         <a class="active" href="about.html"><i class="fas fa-user"></i>About</a>
+        <a href="guestbook.html"><i class="fas fa-book"></i>Guestbook</a>
 
     </div>
     <div class="toggle-box">
