Added Android App project

--- a/html/projects.html
+++ b/html/projects.html
@@ -49,7 +49,11 @@
             </li>
             <br></br>
             <li>
-
+                <p>This project is an application for Android that uses the Steam API to be able to search for users by their IDs, store the data using SQLite, and see what games the user has.
+                    <br> Other notable features include embedded videos, storing user settings, and being able to use implicit intents to share a user's profile, as well as explicit intents to open Steam's website to see new game releases.
+                </p>
+                <img src="../images/Android App.PNG" alt="A picture of Erin holding a mug">
+                <img src="../images/AndroidAppGames.PNG" alt="A picture of Erin holding a mug">
 
             </li>
         </ul>
