Text edits, adjusted footer, adjust body viewport, scaled images better

--- a/html/about.html
+++ b/html/about.html
@@ -30,7 +30,7 @@
     <div class="textbox">
 
         <h1>About</h1>
-        <p>In my free time, I enjoy reading, working on projects like this website, drinking craft beer, and playing Dungeons & Dragons with my friends!</p>
+        <p>In my free time I enjoy reading, working on projects like this website, drinking craft beer, weight-lifting, and playing Dungeons & Dragons with my friends!</p>
 
 
         <script src="../app.js"></script>
