--- a/html/projects.html
+++ b/html/projects.html
@@ -6,6 +6,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://kit.fontawesome.com/726049509b.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body class="light-theme">
@@ -30,36 +31,43 @@
     <div class="textbox">
 
         <h1>Projects</h1>
-        <p id="msg">My projects:</p>
+        <p>The code for these projects and others can be found on my <a href="https://github.com/ErinVillasenor">GitHub</a></p>
+        <p>My projects:</p>
         <ul>
             <li>Capstone project with HP Labs:
                 <br></br>
                 <br>This project was my Senior Capstone project at Oregon State University, which I worked on with Devin Swift and Paul Lee.
                 <br>The summary of the project was to automate the process of altering variables in a CAD (SolidWorks) and use machine learning to narrow the scope of the parameters in order to meet a given objective</br>
                 <br>In our case, we used a launcher and propellor model to maximize airtime of the propellors we created in SolidWorks</br>
-                <br></br> More information can be found on our <a href="https://github.com/ErinVillasenor/CS80Project">GitHub</a>
+                <br></br> More information can be found in our <a href="https://github.com/ErinVillasenor/CS80Project">project directory</a>
                 <br></br>
                 If you're interested in the results of our project, including our more technical papers and experiment data, please send me an email!
                 </p>
                 <br></br>
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/jwm2ER5R04c"></iframe>
-                </iframe>
-
-
             </li>
-            <br></br>
+        </ul>
+    </div>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/jwm2ER5R04c"></iframe>
+    </iframe>
+
+    <div class="textbox">
+
+        <br></br>
+        <ul>
             <li>
                 <p>This project is an application for Android that uses the Steam API to be able to search for users by their IDs, store the data using SQLite, and see what games the user has.
                     <br> Other notable features include embedded videos, storing user settings, and being able to use implicit intents to share a user's profile, as well as explicit intents to open Steam's website to see new game releases.
                 </p>
-                <img src="../images/Android App.PNG" alt="A picture of Erin holding a mug">
-                <img src="../images/AndroidAppGames.PNG" alt="A picture of Erin holding a mug">
-
             </li>
         </ul>
+    </div>
+    <img src="../images/Android App.PNG" alt="A picture of the Steam app displaying user Robin's profile and showing their status as offline.">
+    <img src="../images/AndroidAppGames.PNG" alt="A picture of the Steam app displaying a user's games.">
 
-        <script src="../app.js"></script>
-        <noscript>You need to enable JavaScript to view the full site.</noscript>
+
+
+    <script src="../app.js"></script>
+    <noscript>You need to enable JavaScript to view the full site.</noscript>
     </div>
 </body>
 
