--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <noscript>You need to enable JavaScript to view the full site.</noscript>
     </div>
 
-    <footer>
+    <footer class="photo_credits">
         <div class="textbox">
             <p>Photo credit:<br>
                 <p>https://www.opsisarch.com/project/oregon-state-university-student-experience-center/</p>
