Removed splide, fixed nightmode bug

--- a/html/test.html
+++ b/html/test.html
@@ -26,9 +26,16 @@
             <div class="ball"></div>
         </label>
     </div>
-
-    <script src="../app.js"></script>
-    <noscript>You need to enable JavaScript to view the full site.</noscript>
+    <div class="carousel"="carousel-container">
+        <div class="carousel-slide">
+            <img src="../images/ErinMug.jpg" alt="A picture of Erin holding a mug">
+            <img src="../images/erinFamily.jpg" alt="Erin and his family at the plaza">
+            <img src="../images/erinDnd.jpg" alt="Erin with his Dungeons and Dragons group">
+            <img src="../images/erinCousins.jpg" alt="Erin with his cousins in Mexico">
+            <img src="../images/ErinMug.jpg" alt="A picture of Erin holding a mug">
+        </div>
+        <script src="../app.js"></script>
+        <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
 
 </html>
