--- a/html/contact.html
+++ b/html/contact.html
@@ -30,7 +30,7 @@
     <div class="textbox">
 
         <h1>Contact Me!</h1>
-        <p><span class="tumnus bitter">toh</span></p>
+        <p><span class="tumnus bitter">nsm</span></p>
         <p><span class="tumnus fruity">145</span></p>
 
         <a href="https://www.linkedin.com/in/erin-villasenor/"> <i class="fab fa-linkedin" style="font-size: 300%"></i>
